--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-elastic-carousel": "^0.11.5",
+    "react-gauge-chart": "^0.5.1",
     "react-google-login": "^5.2.2",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
